[package]
name = "r_weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde_json = { version = "1.0.64"}
geolocation = "0.2.1"
local-ip-address = "0.5.1"
